// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can unzip bgzip-1.txt.gz 1`] = `
[
  0,
  101,
]
`;

exports[`can unzip bgzip-1.txt.gz 2`] = `
[
  0,
  4682,
]
`;

exports[`can unzip bgzip-1.txt.gz positive maxv.blockPosition 1`] = `
[
  50,
  22579,
  22680,
]
`;

exports[`can unzip bgzip-1.txt.gz positive maxv.blockPosition 2`] = `
[
  0,
  4682,
  24403,
]
`;

exports[`can unzip bgzip-1.txt.gz positive minv.dataPosition 1`] = `
[
  50,
  101,
]
`;

exports[`can unzip bgzip-1.txt.gz positive minv.dataPosition 2`] = `
[
  0,
  4682,
]
`;
